# ranker

./: .gitignore  LICENSE  README.md
evaluation/: csv-eval.py  states-plot.gnu
examples/: A11.ba  A3.ba  A4.ba  A6.ba  A8.ba  A9.ba
experimental/: experimental.py  gff-parser.py
src/: AutGraph.cpp  AutGraph.h  AuxFunctions.cpp  AuxFunctions.h  BuchiAutomataParser.cpp  BuchiAutomataParser.h  BuchiAutomaton.cpp  BuchiAutomaton.h  BuchiAutomatonSpec.cpp  BuchiAutomatonSpec.h  CMakeLists.txt  Compl-config.h  ComplementBA.cpp  ComplementBA.h  Makefile  Options.h  RankFunc.cpp  RankFunc.h  Ranker-general.cpp  Ranker-general.h  Simulations.cpp  Simulations.h  StateKV.h  StateSch.h  ranker-composition.cpp  ranker-sim.cpp  ranker-tight.cpp  ranker.cpp  rnk-red-complement.cpp  version.cpp.in
src/Algorithms/: AuxFunctions.cpp  AuxFunctions.h  Simulations.cpp  Simulations.h
src/Automata/: APSymbol.h  AutGraph.cpp  AutGraph.h  AutomatonStruct.cpp  AutomatonStruct.h  BuchiAutomataParser.cpp  BuchiAutomataParser.h  BuchiAutomaton.cpp  BuchiAutomaton.h  BuchiAutomatonException.h  GenBuchiAutomaton.cpp  GenBuchiAutomaton.h  GenCoBuchiAutomaton.cpp  GenCoBuchiAutomaton.h  GeneralizedBuchiAutomaton.cpp  GeneralizedBuchiAutomaton.h  StateSemiDet.h
src/Complement/: BuchiAutomatonSpec.cpp  BuchiAutomatonSpec.h  BuchiDelay.cpp  BuchiDelay.h  CoBuchiCompl.cpp  CoBuchiCompl.h  ElevatorAutomaton.cpp  ElevatorAutomaton.h  GenBuchiAutomatonCompl.cpp  GenBuchiAutomatonCompl.h  GenCoBuchiAutomatonCompl.cpp  GenCoBuchiAutomatonCompl.h  Options.h  RankFunc.cpp  RankFunc.h  SemiDeterministicCompl.cpp  SemiDeterministicCompl.h  StateGcoBA.h  StateKV.h  StateSD.h  StateSch.h  StateSchGBA.h  tmpGenBuchiComplCPP  tmpGenBuchiComplH
src/Debug/: BuchiAutomatonDebug.cpp  BuchiAutomatonDebug.h
src/units/: compl-check.cpp  test-classify.cpp  test-hoa-parser.cpp  test-hoa-word.cpp  test-kv-compl.cpp  test-nfa-prop.cpp  test-parser.cpp  test-process.cpp  test-sch-compl.cpp  test-sch-hard.cpp  test-sch-opt-compl.cpp  test-sch-red-compl.cpp  test-simulation.cpp  units-config.h
